--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -4,7 +4,7 @@
     --link-hover-color: hsl(0, 0%, 100%);
 
     :global(.new-design) & {
-        --link-color: var(--yellow);
+        --link-color: var(--yellow500);
         --link-hover-color: hsl(37, 100%, 83%);
     }
 
