--- a/app/components/progress-bar.module.css
+++ b/app/components/progress-bar.module.css
@@ -4,5 +4,5 @@
     top: 0;
     height: 3px;
     box-shadow: 0 0 10px hsla(221, 100%, 8%, 0.6);
-    background: var(--yellow) !important;
+    background: var(--yellow500);
 }
