styles: Add `--grey999|000` CSS variables

--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -1,4 +1,5 @@
 :root {
+    --grey999: hsl(200, 15%, 0%);
     --grey900: hsl(200, 15%, 19%);
     --grey800: hsl(200, 14%, 32%);
     --grey700: hsl(200, 11%, 43%);
@@ -8,6 +9,7 @@
     --grey300: hsl(200, 19%, 91%);
     --grey200: hsl(200, 17%, 96%);
     --grey100: hsl(200, 26%, 98%);
+    --grey000: hsl(200, 15%, 100%);
 
     --yellow900: hsl(37, 100%, 21%);
     --yellow800: hsl(37, 87%, 30%);
