Revert "Auto merge of #2580 - Turbo87:footer, r=jtgeibel"
This reverts commit 03007cf9dcee4ca050cb913c3ac10ed5647b7b69, reversing
changes made to e89ce9177ed31300e5001ed1d54ffc2e062dc881.

Temporarily reverting UI changes until we collect community feedback.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,6 +16,10 @@
 
 <Footer/>
 
+<a href='https://github.com/rust-lang/crates.io' local-class='fork-me'>
+  <img src='/assets/forkme.png' alt="Fork me on GitHub">
+</a>
+
 {{#if this.design.showToggleButton}}
   <button type="button" local-class="toggle-design-button" {{on "click" this.design.toggle}}>
     Toggle Design
