--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -17,9 +17,14 @@
           <span local-class='yanked'>yanked</span>
         {{/if}}
       </div>
-      <LinkTo @route="crate.version" @model={{version.num}} local-class="arrow">
-        {{svg-jar "right-arrow"}}
-      </LinkTo>
+      <div>
+        {{#if this.isOwner}}
+          <YankButton @version={{version}} />
+        {{/if}}
+        <LinkTo @route="crate.version" @model={{version.num}} local-class="arrow">
+          {{svg-jar "right-arrow"}}
+        </LinkTo>
+      </div>
     </div>
   {{/each}}
 </div>
