Yank button can be normal-sized
Since it no longer appears in the screen-real-estate-impaired latest
versions short list

--- a/app/components/yank-button.module.css
+++ b/app/components/yank-button.module.css
@@ -1,5 +1,3 @@
 .button {
-    composes: yellow-button from '../styles/shared/buttons.module.css';
-    padding: 6px 12px;
-    border-radius: 18px;
+    composes: yellow-button small from '../styles/shared/buttons.module.css';
 }
