--- a/app/components/yank-button.module.css
+++ b/app/components/yank-button.module.css
@@ -1,3 +1,7 @@
-.button {
+.yellow-button {
     composes: yellow-button small from '../styles/shared/buttons.module.css';
+}
+
+.tan-button {
+    composes: tan-button small from '../styles/shared/buttons.module.css';
 }
