Fix button alignment on mobile / narrow widths

--- a/app/styles/index.module.css
+++ b/app/styles/index.module.css
@@ -21,6 +21,7 @@
 
 .hero-button {
     composes: yellow-button from '../styles/shared/buttons.module.css';
+    vertical-align: initial;
 }
 
 .blurb {
