--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -1,7 +1,7 @@
 {{page-title 'Manage Crate Owners'}}
 
 <PageHeader
-  @title="Manager Crate Owners"
+  @title="Manage Crate Owners"
   @suffix={{this.crate.name}}
   @icon="gear"
 />
