Make “Getting Started” footer capitalization consistent
In other footer links, only the first character is capitalized, for example
“Send us an email”. This commit makes the “Getting Started” link
consistent.

--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -2,7 +2,7 @@
   <div local-class='after-main-links'>
     <a href='https://doc.rust-lang.org/cargo/getting-started/installation.html'>Install</a>
     <span local-class="sep">|</span>
-    <a href='https://doc.rust-lang.org/cargo/'>Getting Started</a>
+    <a href='https://doc.rust-lang.org/cargo/'>Getting started</a>
     <span local-class="sep">|</span>
     <a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a>
     <span local-class="sep">|</span>
