--- a/app/components/footer.hbs
+++ b/app/components/footer.hbs
@@ -1,7 +1,5 @@
 <footer local-class="footer">
   <div local-class='after-main-links'>
-    <a href='https://doc.rust-lang.org/cargo/getting-started/installation.html'>Install</a>
-    <span local-class="sep">|</span>
     <a href='https://doc.rust-lang.org/cargo/'>Getting started</a>
     <span local-class="sep">|</span>
     <a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a>
@@ -9,6 +7,8 @@
     <a href='mailto:help@crates.io'>Send us an email</a>
     <span local-class="sep">|</span>
     <a href='https://www.rust-lang.org/policies/security'>Report a security issue</a>
+    <span local-class="sep">|</span>
+    <a href='https://github.com/rust-lang/crates.io'>Fork on GitHub</a>
     <span local-class="sep">|</span>
     <a href='https://www.rust-lang.org/policies/privacy'>Privacy notice</a>
     <span local-class="sep">|</span>
