Add missing `alt` attributes for the loading spinners

--- a/app/components/api-token-row.hbs
+++ b/app/components/api-token-row.hbs
@@ -54,7 +54,7 @@
       </button>
     {{/if}}
     {{#if this.api_token.isSaving}}
-      <img src="/assets/ajax-loader.gif" data-test-saving-spinner>
+      <img src="/assets/ajax-loader.gif" alt="Loading Spinner" data-test-saving-spinner>
     {{/if}}
   </div>
 </div>
