--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -13,8 +13,8 @@
 {{else if this.hasItems}}
   <div local-class="results-meta">
     <ResultsCount
-      @start={{this.currentPageStart}}
-      @end={{this.currentPageEnd}}
+      @start={{this.pagination.currentPageStart}}
+      @end={{this.pagination.currentPageEnd}}
       @total={{this.totalItems}}
       data-test-search-nav
     />
@@ -48,7 +48,7 @@
     {{/each}}
   </div>
 
-  <Pagination @pages={{this.pages}} @prevPage={{this.prevPage}} @nextPage={{this.nextPage}} />
+  <Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
 {{else}}
   <h2>0 crates found. <a href='https://doc.rust-lang.org/cargo/getting-started/'>Get started</a> and create your own.</h2>
 {{/if}}
