--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -17,8 +17,8 @@
 
 <div local-class="results-meta">
   <ResultsCount
-    @start={{this.currentPageStart}}
-    @end={{this.currentPageEnd}}
+    @start={{this.pagination.currentPageStart}}
+    @end={{this.pagination.currentPageEnd}}
     @total={{this.totalItems}}
   />
 
@@ -40,4 +40,4 @@
   {{/each}}
 </div>
 
-<Pagination @pages={{this.pages}} @prevPage={{this.prevPage}} @nextPage={{this.nextPage}} />
+<Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
