Pagination: Accept `pagination` object instead of individual arguments

--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -37,7 +37,7 @@
   {{/each}}
 </div>
 
-<Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
+<Pagination @pagination={{this.pagination}} />
 
 <div local-class='categories-footer'>
   Want to categorize your crate?
