--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -29,4 +29,4 @@
   {{/each}}
 </div>
 
-<Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
+<Pagination @pagination={{this.pagination}} />
