--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -40,4 +40,4 @@
   {{/each}}
 </div>
 
-<Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
+<Pagination @pagination={{this.pagination}} />
