--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -43,4 +43,4 @@
   {{/each}}
 </div>
 
-<Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
+<Pagination @pagination={{this.pagination}} />
