--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -30,4 +30,4 @@
   {{/each}}
 </div>
 
-<Pagination @pages={{this.pagination.pages}} @prevPage={{this.pagination.prevPage}} @nextPage={{this.pagination.nextPage}} />
+<Pagination @pagination={{this.pagination}} />
