ApiTokenRow: Rename `api_token` argument to `token`

--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -93,7 +93,7 @@
 </p>
 
 <div local-class="token-list">
-  {{#each this.sortedTokens as |api_token|}}
-    <ApiTokenRow @api_token={{api_token}} />
+  {{#each this.sortedTokens as |token|}}
+    <ApiTokenRow @token={{token}} />
   {{/each}}
 </div>
