--- a/app/components/follow-button.hbs
+++ b/app/components/follow-button.hbs
@@ -1,6 +1,6 @@
 <button type="button" local-class="button" {{on "click" (perform this.toggleFollowTask)}} data-test-follow-button>
   {{#if (or this.followStateTask.isRunning this.toggleFollowTask.isRunning)}}
-    <img src="/assets/ajax-loader.gif" alt="Loading Spinner" data-test-spinner>
+    <LoadingSpinner data-test-spinner />
   {{else}}
     {{#if this.following}}
       Unfollow
