--- a/app/components/page-header.hbs
+++ b/app/components/page-header.hbs
@@ -9,7 +9,7 @@
         <small local-class="suffix">{{@suffix}}</small>
       {{/if}}
       {{#if @showSpinner}}
-        <img src="/assets/ajax-loader.gif" alt="Loading Spinner" local-class="loading-spinner">
+        <LoadingSpinner local-class="loading-spinner" />
       {{/if}}
     </h1>
   {{/if}}
