--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -62,7 +62,7 @@
 
       {{#if this.loadMoreTask.isRunning}}
         <span local-class='load-more'>
-          <img src="/assets/ajax-loader.gif" alt="Loading">
+          <LoadingSpinner />
         </span>
       {{else}}
         {{#if this.hasMore}}
