ApiTokenRow: Use explicit CSS class for loading spinners

--- a/app/components/api-token-row.module.css
+++ b/app/components/api-token-row.module.css
@@ -45,7 +45,10 @@
 .actions {
     display: flex;
     align-items: center;
-    img { margin-left: 10px }
+}
+
+.spinner {
+    margin-left: 10px
 }
 
 .save-button {
