LoadingSpinner: Use CSS based spinner animation

--- a/app/components/loading-spinner.hbs
+++ b/app/components/loading-spinner.hbs
@@ -1,6 +1,6 @@
-<img
-  src="/assets/ajax-loader.gif"
-  alt="Loading Spinner"
+<div
+  title="Loading Spinner"
   local-class="spinner"
   ...attributes
 >
+</div>
