--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -10,7 +10,13 @@
         {{ @crate.name }}
       </LinkTo>
       <span local-class="version" data-test-version>v{{@crate.max_version}}</span>
-      <CrateTomlCopy @copyText='{{@crate.name}} = "{{@crate.max_version}}"' @inline={{true}} local-class="copy-button" />
+      <CopyButton
+        @copyText='{{@crate.name}} = "{{@crate.max_version}}"'
+        title="Copy Cargo.toml snippet to clipboard"
+        local-class="copy-button"
+      >
+        {{svg-jar "copy" alt="Copy Cargo.toml snippet to clipboard"}}
+      </CopyButton>
     </div>
     <div local-class="description" data-test-description>
       {{ truncate-text @crate.description }}
