Use `fill: currentColor` in `lock` icon
This makes the icon better reusable and makes it easier to introduce e.g. hover states

--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -70,7 +70,7 @@
         </Dropdown>
       {{else}}
         <LinkTo @route="login" data-test-login-link>
-          {{svg-jar "lock"}}
+          {{svg-jar "lock" local-class="login-icon"}}
           Log in with GitHub
         </LinkTo>
       {{/if}}
