Use `fill: currentColor` in `flag` icon
This makes the icon better reusable and makes it easier to introduce e.g. hover states

--- a/app/styles/index.module.css
+++ b/app/styles/index.module.css
@@ -22,6 +22,10 @@
 .hero-button {
     composes: yellow-button from '../styles/shared/buttons.module.css';
     vertical-align: initial;
+
+    .icon {
+        color: #c4890e;
+    }
 }
 
 .blurb {
