--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,7 +8,7 @@
     </a>
 
     <a href='https://doc.rust-lang.org/cargo/guide/' local-class="hero-button">
-      {{svg-jar "flag"}}
+      {{svg-jar "flag" local-class="icon"}}
       Getting Started
     </a>
   </div>
