Use `fill: currentColor` in `button-download` icon
This makes the icon better reusable and makes it easier to introduce e.g. hover states

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
 
   <div local-class='links'>
     <a href="https://doc.rust-lang.org/cargo/getting-started/installation.html" local-class="hero-button" data-test-install-cargo-link>
-      {{svg-jar "button-download"}}
+      {{svg-jar "button-download" local-class="icon"}}
       Install Cargo
     </a>
 
