Use `fill: currentColor` in `copy` icon
This makes the icon better reusable and makes it easier to introduce e.g. hover states

--- a/app/components/crate-row.module.css
+++ b/app/components/crate-row.module.css
@@ -24,6 +24,7 @@
 .copy-button {
     composes: button-reset from '../styles/shared/buttons.module.css';
     padding: 1px 6px;
+    color: var(--main-color);
     cursor: pointer;
     opacity: 0;
     transition: 250ms;
