Use `fill: currentColor` in `sort` icon
This makes the icon better reusable and makes it easier to introduce e.g. hover states

--- a/app/components/sort-dropdown.hbs
+++ b/app/components/sort-dropdown.hbs
@@ -1,6 +1,6 @@
 <Dropdown as |dd|>
   <dd.Trigger local-class="trigger" data-test-current-order>
-    {{svg-jar "sort"}}
+    {{svg-jar "sort" local-class="icon"}}
     {{@current}}
   </dd.Trigger>
 
