Header: Replace "Login" link with button
Having this as a link suggests that users e.g. can open this route in a new tab or save a bookmark, but the fact that this is currently implemented as a route should be considered an internal implementation detail and opening the route directly doesn't actually work at all.

--- a/app/components/dropdown/menu-item.module.css
+++ b/app/components/dropdown/menu-item.module.css
@@ -1,8 +1,9 @@
 .item {
-    a {
+    > a, button {
         font-size: 90%;
         width: 100%;
         display: inline-block;
+        text-align: start;
         padding: 8px 10px;
         text-decoration: none;
         color: var(--main-color) !important;
