--- a/app/components/owned-crate-row.hbs
+++ b/app/components/owned-crate-row.hbs
@@ -4,7 +4,7 @@
     @name={{this.controlId}}
     id={{this.controlId}}
     @checked={{this.emailNotifications}}
-    @change={{action "toggleEmailNotifications"}}
+    @change={{this.setEmailNotifications}}
   />
   <label for="{{ this.controlId }}">
     {{ this.name }}
