--- a/app/components/owned-crate-row.module.css
+++ b/app/components/owned-crate-row.module.css
@@ -3,73 +3,73 @@
     display: block;
     position: relative;
     border: 1px solid #d5d3cb;
+}
 
-    label {
-        padding: 20px 30px;
+.label {
+    padding: 20px 30px;
+    width: 100%;
+    display: block;
+    text-align: left;
+    font-weight: bold;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    transition: color 200ms ease-in;
+    overflow: hidden;
+
+    &:before {
         width: 100%;
-        display: block;
-        text-align: left;
-        font-weight: bold;
-        cursor: pointer;
-        position: relative;
-        z-index: 2;
-        transition: color 200ms ease-in;
-        overflow: hidden;
-
-        &:before {
-            width: 100%;
-            height: 10px;
-            border-radius: 50%;
-            content: '';
-            background-color: var(--main-bg-dark);
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%) scale3d(1, 1, 1);
-            opacity: 0;
-            z-index: -1;
-        }
-
-        &:after {
-            width: 32px;
-            height: 32px;
-            content: '';
-            border: 2px solid #d5d3cb;
-            border-radius: 50%;
-            z-index: 2;
-            position: absolute;
-            right: 30px;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
-        }
+        height: 10px;
+        border-radius: 50%;
+        content: '';
+        background-color: var(--main-bg-dark);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%) scale3d(1, 1, 1);
+        opacity: 0;
+        z-index: -1;
     }
 
-    input:checked ~ label {
-        &:before {
-            transform: translate(-50%, -50%) scale3d(56, 56, 1);
-            opacity: 1;
-        }
-
-        &:after {
-            background-color: #cfc487;
-            border-color: #cfc487;
-            background-image: url('/assets/check-mark.svg');
-            background-repeat: no-repeat;
-            background-position: 3px 4px;
-        }
-    }
-
-    input {
+    &:after {
         width: 32px;
         height: 32px;
-        order: 1;
+        content: '';
+        border: 2px solid #d5d3cb;
+        border-radius: 50%;
         z-index: 2;
         position: absolute;
         right: 30px;
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
-        visibility: hidden;
     }
+}
+
+.input:checked ~ .label {
+    &:before {
+        transform: translate(-50%, -50%) scale3d(56, 56, 1);
+        opacity: 1;
+    }
+
+    &:after {
+        background-color: #cfc487;
+        border-color: #cfc487;
+        background-image: url('/assets/check-mark.svg');
+        background-repeat: no-repeat;
+        background-position: 3px 4px;
+    }
+}
+
+.input {
+    width: 32px;
+    height: 32px;
+    order: 1;
+    z-index: 2;
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    visibility: hidden;
 }
