OwnedCrateRow: Move `<li>` element out of the component
Components should generally be reusable outside the context of a list. Having the `<li>` element inside the component makes that impossible.

--- a/app/components/owned-crate-row.hbs
+++ b/app/components/owned-crate-row.hbs
@@ -1,12 +1,14 @@
-<li local-class="row" data-test-owned-crate={{@ownedCrate.name}} ...attributes>
-  <label local-class="label {{if @ownedCrate.email_notifications "checked"}}">
-    {{@ownedCrate.name}}
+<label
+  local-class="label {{if @ownedCrate.email_notifications "checked"}}"
+  data-test-owned-crate={{@ownedCrate.name}}
+  ...attributes
+>
+  {{@ownedCrate.name}}
 
-    <input
-      type="checkbox"
-      checked={{@ownedCrate.email_notifications}}
-      local-class="input"
-      {{on "change" this.setEmailNotifications}}
-    />
-  </label>
-</li>
+  <input
+    type="checkbox"
+    checked={{@ownedCrate.email_notifications}}
+    local-class="input"
+    {{on "change" this.setEmailNotifications}}
+  />
+</label>
