EmailInput: Hardcode `type` attribute of the `input` element
This is an *email* input so it seems a bit unusual to assign anything else to the input... :D

--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -15,7 +15,7 @@
       </div>
       <form local-class="email-form" {{action 'saveEmail' on='submit'}}>
         <Input
-          @type={{this.type}}
+          @type="email"
           @value={{this.value}}
           placeholder="Email"
           local-class="input"
