EmailInput: Inline and simplify `emailIsNull` check
There is no need to check explicitly for `null`. A falsy check should be sufficient here.

--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -1,12 +1,12 @@
 <div ...attributes>
-  {{#if this.emailIsNull }}
+  {{#unless @user.email}}
     <div local-class="friendly-message" data-test-no-email>
       <p>
         Please add your email address. We will only use
         it to contact you about your account. We promise we'll never share it!
       </p>
     </div>
-  {{/if}}
+  {{/unless}}
 
   {{#if this.isEditing }}
     <div local-class="row">
