EmailInput: Move `disableSave` property into the template

--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -26,7 +26,7 @@
           <button
             type='submit'
             local-class="save-button"
-            disabled={{this.disableSave}}
+            disabled={{not this.value}}
             data-test-save-button
           >
             Save
