--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -66,7 +66,14 @@
             <menu.Item><LinkTo @route="me">Account Settings</LinkTo></menu.Item>
             <menu.Item><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></menu.Item>
             <menu.Item local-class="menu-item-with-separator">
-              <button type="button" local-class="logout-menu-item" {{on "click" (perform this.logoutTask)}}>Sign Out</button>
+              <button
+                type="button"
+                local-class="logout-menu-item"
+                data-test-logout-button
+                {{on "click" (perform this.logoutTask)}}
+              >
+                Sign Out
+              </button>
             </menu.Item>
           </dd.Menu>
         </Dropdown>
