catch-all: Fix broken input field

--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -7,7 +7,7 @@
     @type="text"
     local-class="search-field"
     placeholder="Search"
-    @value={{this.search}}
+    @value={{this.header.searchValue}}
     @enter={{action "search"}}
     required={{true}}
   />
