--- a/app/templates/catch-all.hbs
+++ b/app/templates/catch-all.hbs
@@ -1,4 +1,4 @@
-<h1>Oops, that route doesn't exist!</h1>
+<h1 data-test-404-header>Oops, that route doesn't exist!</h1>
 
 <p local-class='p404'>
   Perhaps a search of the site may help?
@@ -10,5 +10,6 @@
     @value={{this.header.searchValue}}
     @enter={{action "search"}}
     required={{true}}
+    data-test-404-search-input
   />
 </p>
