--- a/app/components/sort-dropdown.module.css
+++ b/app/components/sort-dropdown.module.css
@@ -2,11 +2,11 @@
     background-color: var(--main-bg-dark);
     font-size: 85%;
     padding: 10px;
-    display: inline-block;
     border: none;
     border-radius: 5px;
 }
 
 .icon {
     color: #1a9c5d;
+    margin-right: 0.5em;
 }
